# work-break

./: AUTHORS  CMakeLists.txt  README  work-break.desktop
docs/: index_en.html.in  index_en.html.in.bak
macosx/: bundle.cmake.in  work-break.icns
src/: main.cpp  workbreak.cpp  workbreak.h
src/icons/: README
